--- a/requirements/project/templates/post.html
+++ b/requirements/project/templates/post.html
@@ -112,7 +112,7 @@
         <div class="container">
             <div class="commentcontainer">
                 <div class="initial">
-                    <span>{{.Initial}}</span>
+                    {{.Initial}}
                 </div>
     
                  <div class="info">
@@ -168,7 +168,7 @@
 
     <footer class="footer">
         <div class="footer-container">
-            <p>&copy; 2025 FORUM — Built with ❤️ by the Forum Team</p>
+            <p>&copy; 2025 FORUM — Built with 💙 by the Forum Team</p>
         </div>
     </footer>
 
