--- a/requirements/project/templates/error.html
+++ b/requirements/project/templates/error.html
@@ -34,7 +34,7 @@
     <div class="error-code">{{.StatusCode}}</div>
     <footer>
         <div class="footer-container">
-            <p>&copy; 2025 FORUM — Built with ❤️ by the Forum Team</p>
+            <p>&copy; 2025 FORUM — Built with 💙 by the Forum Team</p>
         </div>
     </footer>
 </body>
