--- a/requirements/project/templates/new_post.html
+++ b/requirements/project/templates/new_post.html
@@ -1,71 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/static/css/forms.css" />
+    <link rel="icon" href="/static/svg/favicon.svg" type="image/svg" />
+    <title>Post</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/static/css/forms.css" />
-  <link rel="icon" href="/static/svg/favicon.svg" type="image/svg" />
-  <title>Post</title>
-</head>
-
-<body>
-  <header>
-    <div id="project_header">
-      <h1>
-        <a href="/"><img src="/static/svg/favicon.svg" alt="Forum logo" /></a>
-      </h1>
-    </div>
-    <div class="profile-icon">
-      <a href="/logout"><img src="/static/svg/log-out.svg" alt="logout" /></a>
-      <a href="/profile"><img src="/static/svg/circle-user-round.svg" alt="user profile" /></a>
-    </div>
-  </header>
-
-  {{if .Error}}
-  <div class="error-container">
-    {{.Message}}
-  </div>
-  {{end}}
-
-  <div class="container">
-    <form action="/newPost" method="POST" class="postForm">
-      <img src="/static/svg/writer.svg" alt="Create post" />
-      <h2>Create a Post</h2>
-      <h1>New Forum Post</h1>
-
-      <div class="formfield">
-        <label for="title">Post Title</label>
-        <input type="text" id="title" name="title" placeholder="Title..." minlength="10" maxlength="70" required />
+  <body>
+    <header class="header">
+      <div class="header__logo">
+        <a href="/" class="header__logo-link">
+          <img src="/static/svg/logo.svg" alt="Logo" class="header__logo-img" />
+        </a>
       </div>
 
-      <div class="formfield">
-        <label for="content">Content</label>
-        <textarea id="content" name="content" placeholder="Insert content here..." minlength="1" maxlength="10000"
-          required></textarea>
+      <div class="header__filter">
+        <h2>Create a new post</h2>
       </div>
-
-      <div class="formfield">
-        <label>Select Categories</label>
-        <div class="box-group">
-          {{range $key, $value := .Fields}}
-          <div>
-            <input type="checkbox" name="Categories" id="{{$key}}" value="{{$key}}" />
-            <label for="{{$key}}">{{$key}}</label>
-          </div>
-          {{end}}
+      <div class="user_actions--header">
+        {{if .Authenticated}}
+        <div class="profile_section--header"></div>
+        <div class="nes_post--header">
+          <a
+            href="/newPost"
+            class="readmore"
+            aria-label="Create new post"
+            id="btn2"
+          >
+            <img src="/static/svg/pencil-line.svg" alt="New post icon" />
+            Create Post
+          </a>
         </div>
+
+        <nav class="profile-nav">
+          <ul>
+            <li class="profile-dropdown">
+              <div class="header__profile">
+                <div class="initial">{{.Initial}}</div>
+                <div class="username">{{.Username}}</div>
+              </div>
+              <ul>
+                <li>
+                  <a href="/profile" class="header__profile-link">
+                    <img
+                      src="/static/svg/bolt.svg"
+                      class="header__profile-icon"
+                    />
+                    Account Settings
+                  </a>
+                </li>
+                <li>
+                  <a href="/logout" class="header__profile-link">
+                    <img
+                      src="/static/svg/log-out.svg"
+                      class="header__profile-icon"
+                    />
+                    Logout
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+        {{else}}
+        <div class="header__auth-links">
+          <a href="/register" class="header__auth-link">Sign Up</a>
+          <a href="/login" class="header__auth-link">Login</a>
+        </div>
+        {{end}}
       </div>
 
-      <input type="submit" value="Post" />
-    </form>
-  </div>
+      <!-- <nav class="header__profile-nav" aria-label="User actions">
+      {{if .Authenticated}}
+      <a href="/newPost" class="header__profile-link header__profile-link--new-post" aria-label="Create new post">
+        <img src="/static/svg/pencil-line.svg" alt="New post icon" class="header__profile-icon" />
+      </a>
+      <a href="/logout" class="header__profile-link header__profile-link--logout" aria-label="Logout">
+        <img src="/static/svg/log-out.svg" alt="Logout icon" class="header__profile-icon" />
+      </a>
+      <a href="/profile" class="header__profile-link header__profile-link--profile" aria-label="User profile">
+        <img src="/static/svg/circle-user-round.svg" alt="User profile icon" class="header__profile-icon" />
+      </a>
+      {{else}}
+      <a href="/register" class="header__auth-link">Sign Up</a>
+      <a href="/login" class="header__auth-link">Login</a>
+      {{end}}
+    </nav> -->
+    </header>
 
-  <footer>
-    <div class="footer-container">
-      <p>&copy; 2025 FORUM — Built with ❤️ by the Forum Team</p>
+    {{if .Error}}
+    <div class="error-container">{{.Message}}</div>
+    {{end}}
+
+    <div class="container">
+      <form action="/newPost" method="POST" class="postForm">
+        <img src="/static/svg/writer.svg" alt="Create post" />
+        <h2>Create a Post</h2>
+        <h1>New Forum Post</h1>
+
+        <div class="formfield">
+          <label for="title">Post Title</label>
+          <input
+            type="text"
+            id="title"
+            name="title"
+            placeholder="Title..."
+            minlength="10"
+            maxlength="70"
+            required
+          />
+        </div>
+
+        <div class="formfield">
+          <label for="content">Content</label>
+          <textarea
+            id="content"
+            name="content"
+            placeholder="Insert content here..."
+            minlength="1"
+            maxlength="10000"
+            required
+          ></textarea>
+        </div>
+
+        <div class="formfield">
+          <label>Select Categories</label>
+          <div class="box-group">
+            {{range $key, $value := .Fields}}
+            <div>
+              <input
+                type="checkbox"
+                name="Categories"
+                id="{{$key}}"
+                value="{{$key}}"
+              />
+              <label for="{{$key}}">{{$key}}</label>
+            </div>
+            {{end}}
+          </div>
+        </div>
+
+        <input type="submit" value="Post" />
+      </form>
     </div>
-  </footer>
-</body>
 
+    <footer>
+      <div class="footer-container">
+        <p>&copy; 2025 FORUM — Built with 💙 by the Forum Team</p>
+      </div>
+    </footer>
+  </body>
 </html>
