error.css fixed

--- a/requirements/project/templates/error.html
+++ b/requirements/project/templates/error.html
@@ -2,41 +2,41 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/error.css">
-    <link rel="icon" href="/static/svg/favicon.svg" type="image/svg">
-    <title>Error</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/static/css/error.css">
+  <link rel="icon" href="/static/svg/favicon.svg" type="image/svg">
+  <title>Error</title>
 </head>
 
 <body>
-    <header>
-        <div id="project_header">
-            <h1><a href="/"><img src="/static/svg/favicon.svg" alt="user profile"></a></h1>
-        </div>
-        <div class="profile-icon">
-            <a href="/newPost" class="btn-primary"><img src="/static/svg/pencil-line.svg" alt="new post"></a>
-            <a href="/logout"><img src="/static/svg/log-out.svg" alt="logout"></a>
-            <a href="/profile"><img src="/static/svg/circle-user-round.svg" alt="user profile"></a>
-        </div>
-    </header>
-    
-    <div class="error-container">
-        <h1 class="error-title">{{.ErrorTitle}}</h1>
-        <p class="error-message">{{.ErrorMessage}}</p>
-        <p class="error-description">{{.ErrorDescription}}</p>
-        <div class="error-details">
-            <p><strong>Status Code:</strong> {{.StatusCode}}</p>
-            <p><strong>Status Text:</strong> {{.StatusText}}</p>
-        </div>
-        <a href="/" class="home-button">Go Home</a>
+  <header class="header">
+    <div class="header__logo">
+      <a href="/" class="header__logo-link">
+        <img src="/static/svg/logo.svg" alt="Logo" class="header__logo-img" />
+      </a>
     </div>
-    <div class="error-code">{{.StatusCode}}</div>
-    <footer>
-        <div class="footer-container">
-            <p>&copy; 2025 FORUM — Built with 💙 by the Forum Team</p>
-        </div>
-    </footer>
+  </header>
+
+  <div class="error-container">
+    <h1 class="error-title">{{.ErrorTitle}}</h1>
+    <p class="error-message">{{.ErrorMessage}}</p>
+    <p class="error-description">{{.ErrorDescription}}</p>
+    <div class="error-details">
+      <p>{{.StatusCode}}</p>
+      <p> {{.StatusText}}</p>
+    </div>
+    <a href="/" class="home-button">Go Home</a>
+  </div>
+
+  <footer class="footer">
+    <div class="footer__container">
+      <p class="footer__text">
+        &copy; 2025 FORUM — Built with 💙 by the Forum Team
+      </p>
+    </div>
+  </footer>
+
 </body>
 
 </html>
