--- a/requirements/project/templates/post.html
+++ b/requirements/project/templates/post.html
@@ -40,7 +40,7 @@
         <div class="container">
             <div class="post">
                 <div class="top">
-                    <div class="post_head" id="{{.Post.Id}}">
+                    <div class="post_head">
                         <div class="user_container">
                             <div class="initial">
                                 <span>{{.Post.Initial}}</span>
@@ -110,7 +110,7 @@
         {{if .Comments}}
         {{range .Comments}}
         <div class="container">
-            <div class="commentcontainer">
+            <div class="commentcontainer" id="#{{.CommentId}}">
                 <div class="initial">
                     {{.Initial}}
                 </div>
@@ -127,28 +127,33 @@
                 <div class="comment_likes_dislikes">
                     {{if .IsCommentLikedByUser}}
                     <form action="/commentLike" method="POST">
-                        <input type="hidden" name="post_id" value="{{.Id}}" />
+                        <input type="hidden" name="post_id" value="{{.PostId}}" />
+                        <input type="hidden" name="comment_id" value="{{.CommentId}}" />
                         <button type="submit" class="likebtn">
                             <img src="/static/svg/green_like.svg" alt="comment" /> {{.CommentLikes}}
                         </button>
                     </form>
                     {{else}}
                     <form action="/commentLike" method="POST">
-                        <input type="hidden" name="post_id" value="{{.Id}}" />
+                        <input type="hidden" name="post_id" value="{{.PostId}}" />
+                        <input type="hidden" name="comment_id" value="{{.CommentId}}" />
                         <button type="submit" class="likebtn">
                             <img src="/static/svg/like.svg" alt="comment" /> {{.CommentLikes}}
                         </button>
                     </form>
-                    {{end}} {{if .IsCommentDislikedByUser}}
+                    {{end}} 
+                    {{if .IsCommentDislikedByUser}}
                     <form action="/commentDislike" method="POST">
-                        <input type="hidden" name="post_id" value="{{.Id}}" />
+                        <input type="hidden" name="post_id" value="{{.PostId}}" />
+                        <input type="hidden" name="comment_id" value="{{.CommentId}}" />
                         <button type="submit" class="dislikebtn">
                             <img src="/static/svg/red_dislike.svg" alt="comment" /> {{.CommentDislikes}}
                         </button>
                     </form>
                     {{else}}
                     <form action="/commentDislike" method="POST">
-                        <input type="hidden" name="post_id" value="{{.Id}}" />
+                        <input type="hidden" name="post_id" value="{{.PostId}}" />
+                        <input type="hidden" name="comment_id" value="{{.CommentId}}" />
                         <button type="submit" class="dislikebtn">
                             <img src="/static/svg/dislike.svg" alt="comment" /> {{.CommentDislikes}}
                         </button>
