--- a/requirements/project/templates/profile.html
+++ b/requirements/project/templates/profile.html
@@ -10,15 +10,14 @@
 </head>
 
 <body>
-    <header>
-        <div id="project_header">
-            <h1><a href="/"><img src="/static/svg/favicon.svg" alt="user profile"></a></h1>
-        </div>
-        <div class="profile-icon">
-            <a href="/newPost" class="btn-primary"><img src="/static/svg/pencil-line.svg" alt="new post"></a>
-            <a href="/logout"><img src="/static/svg/log-out.svg" alt="logout"></a>
+    <header class="header">
+        <div class="header__logo">
+            <a href="/" class="header__logo-link">
+                <img src="/static/svg/logo.svg" alt="Logo" class="header__logo-img" />
+            </a>
         </div>
     </header>
+
     <div class="profile">
         <div>
             Username : <span class="to-right">{{.Username}} <a href="/profile/update/username"><span
@@ -35,11 +34,14 @@
 
         <a class="delete" href="/profile/delete">Delete This Account</a>
     </div>
-    <footer>
-        <div class="footer-container">
-            <p>&copy; 2025 FORUM — Built with 💙 by the Forum Team</p>
+
+    <footer class="footer">
+        <div class="footer__container">
+          <p class="footer__text">
+            &copy; 2025 FORUM — Built with 💙 by the Forum Team
+          </p>
         </div>
-    </footer>
+      </footer>
 </body>
 
 </html>
