--- a/requirements/project/templates/update.html
+++ b/requirements/project/templates/update.html
@@ -10,32 +10,38 @@
 </head>
 
 <body>
-    <header>
-        <div id="project_header">
-            <h1><a href="/"><img src="/static/svg/favicon.svg" alt="user profile"></a></h1>
-        </div>
-        <div class="profile-icon">
-            <a href="/newPost" class="btn-primary"><img src="/static/svg/pencil-line.svg" alt="new post"></a>
-            <a href="/logout"><img src="/static/svg/log-out.svg" alt="logout"></a>
-            <a href="/profile"><img src="/static/svg/circle-user-round.svg" alt="user profile"></a>
+    <header class="header">
+        <div class="header__logo">
+            <a href="/" class="header__logo-link">
+                <img src="/static/svg/logo.svg" alt="Logo" class="header__logo-img" />
+            </a>
         </div>
     </header>
-    {{if .Error}}
-    <div class="error-container">
-        {{.Message}}
-    </div>
-    {{end}}
     {{if .username}}
-    <form class="" action="/profile/update/username/save" method="post">
-        <input type="text" id="username" name="username" placeholder="Please type your New Username" minlength="3" maxlength="32" required>
-        <input type="password" id="current" name="current" placeholder="Please type your Password" minlength="8" maxlength="72" required>
+    <form action="/profile/update/username/save" method="post">
+        <input type="text" id="username" name="username" placeholder="Please type your New Username" minlength="3"
+            maxlength="32" required>
+        <input type="password" id="current" name="current" placeholder="Please type your Password" minlength="8"
+            maxlength="72" required>
+        {{if .Error}}
+        <div class="error-container">
+            {{.Message}}
+        </div>
+        {{end}}
         <button type="submit">Save</button>
     </form>
     {{end}}
     {{if .email}}
     <form action="/profile/update/email/save" method="post">
-        <input type="text" id="email" name="email" placeholder="Please type your New Email" minlength="6" maxlength="254" required>
-        <input type="password" id="current" name="current" placeholder="Please type your Password" minlength="8" maxlength="72" required>
+        <input type="text" id="email" name="email" placeholder="Please type your New Email" minlength="6"
+            maxlength="254" required>
+        <input type="password" id="current" name="current" placeholder="Please type your Password" minlength="8"
+            maxlength="72" required>
+        {{if .Error}}
+        <div class="error-container">
+            {{.Message}}
+        </div>
+        {{end}}
         <button type="submit">Save</button>
     </form>
     </div>
@@ -48,13 +54,20 @@
             placeholder="Please type your New Password" required>
         <input type="password" id="confirm" name="confirm" minlength="8" maxlength="72"
             placeholder="Please Confirm your New Password" required>
+        {{if .Error}}
+        <div class="error-container">
+            {{.Message}}
+        </div>
+        {{end}}
         <button type="submit">Save</button>
     </form>
     {{end}}
 
-    <footer>
-        <div class="footer-container">
-            <p>&copy; 2025 FORUM — Built with 💙 by the Forum Team</p>
+    <footer class="footer">
+        <div class="footer__container">
+            <p class="footer__text">
+                &copy; 2025 FORUM — Built with 💙 by the Forum Team
+            </p>
         </div>
     </footer>
 </body>
