saving 2025-06-15 before merge with larbi

--- a/requirements/project/templates/post.html
+++ b/requirements/project/templates/post.html
@@ -110,7 +110,7 @@
         {{if .Comments}}
         {{range .Comments}}
         <div class="container">
-            <div class="commentcontainer" id="#{{.CommentId}}">
+            <div class="commentcontainer" id="{{.CommentId}}">
                 <div class="initial">
                     {{.Initial}}
                 </div>
