--- a/requirements/project/templates/profile.html
+++ b/requirements/project/templates/profile.html
@@ -16,6 +16,9 @@
                 <img src="/static/svg/logo.svg" alt="Logo" class="header__logo-img" />
             </a>
         </div>
+        <div class="logout">
+            <a href="/logout">Logout</a>
+        </div>
     </header>
 
     <div class="profile">
