--- a/requirements/project/static/css/forms.css
+++ b/requirements/project/static/css/forms.css
@@ -266,6 +266,74 @@ footer {
     animation: fadeInError 3s ease-in-out;
     visibility: hidden;
 }
+@media (max-width: 768px) {
+  .mobileHeader{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 5px 20px;
+    
+  }
+  .mobileActions{
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 80svw;
+    margin-bottom: 20px;
+  }
+  .header{
+    display: none;
+  }
+  .hero__cta {
+    flex-direction: column;
+    align-items: stretch;
+    text-align: center;
+  }
+  .hero__title {
+    font-size: 1.8rem;
+    max-width: 90%;
+  }
+  .hero__description {
+    font-size: 1rem;
+    max-width: 90%;
+  }
+  .main-content__posts {
+    flex-direction: column;
+    align-items: center;
+  }
+  .container {
+    width: 100% !important;
+  }
+}
+@media (max-width: 480px) {
+  .header{
+    display: none;
+  }
+  .hero__title {
+    font-size: 1.8rem;
+    max-width: 90%;
+  }
+  .hero__description {
+    font-size: 1rem;
+    max-width: 90%;
+  }
+  .main-content__posts {
+    flex-direction: column;
+    align-items: center;
+  }
+  .container {
+    width: 100% !important;
+  }
+  .readmore#btn2 {
+    padding: 8px 20px;
+    font-size: 0.9rem;
+  }
+}
+
+
+
+
 @keyframes fadeInError {
   0% {
     visibility: hidden;
