--- a/requirements/project/static/css/post.css
+++ b/requirements/project/static/css/post.css
@@ -136,7 +136,7 @@ main .container {
   padding: 40px;
   width: calc(40svw - 15px);
   display: flex;
-  width: 80svw;
+  width: 80svw !important;
   margin: auto;
   margin-bottom: 15px;
 }
@@ -176,16 +176,16 @@ main .container {
 
 .commentcontainer {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  width: 100%;
   align-items: flex-start;
   gap: 10px;
 }
 
-#likes_dislikes {
+#likes_dislikes,.comment_likes_dislikes {
   display: flex;
   flex-direction: row !important;
   align-items: center;
-  padding-top: 20px;
   gap: 10px;
 }
 
